--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,6 +7,8 @@ html {
     font-size:100%;
 }
 body {
+    overflow-x: hidden;
+    overflow-y: hidden;
     background: #2B292E;
     color: #fafafa;
     font-family: Helvetica, Arial, sans-serif;
